Heartbeat for failure detection, in case AVDs aren't sending messages