@@ -23,12 +23,15 @@ import java.net.InetAddress;
 import java.net.ServerSocket;
 import java.net.Socket;
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.Map;
-import java.util.PriorityQueue;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executors;
 import java.util.concurrent.PriorityBlockingQueue;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.Semaphore;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 
 /**
@@ -50,21 +53,10 @@ public class GroupMessengerActivity extends Activity {
     ConcurrentHashMap<String, Message> messageHash = new ConcurrentHashMap<String, Message>(50);
     PriorityBlockingQueue<Message> deliverableQueue = new PriorityBlockingQueue<Message>();
     Semaphore access = new Semaphore(2);
+    AtomicBoolean deliver = new AtomicBoolean(false);
+    private final ScheduledExecutorService pingAck = Executors.newScheduledThreadPool(2);
+    ScheduledFuture<?> pingAckHandle = null;
 
-    private class MessagePriority {
-        Message message;
-        ArrayList<Integer> proposedSequence;
-
-        MessagePriority(Message msg) {
-            message = new Message(msg);
-            proposedSequence = new ArrayList<Integer>();
-            for (int i = 0; i < 5; i++) {
-                if (!diededPorts.contains(Integer.valueOf(PORTS_ALL[i]))) {
-                    proposedSequence.add(PORTS_ALL[i]);
-                }
-            }
-        }
-    }
 
     public GroupMessengerActivity() {
         Uri.Builder uriBuilder = new Uri.Builder();
@@ -80,24 +72,12 @@ public class GroupMessengerActivity extends Activity {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_group_messenger);
 
-        /*
-         * TODO: Use the TextView to display your messages. Though there is no grading component
-         * on how you display the messages, if you implement it, it'll make your debugging easier.
-         */
         TextView tv = (TextView) findViewById(R.id.textView1);
         tv.setMovementMethod(new ScrollingMovementMethod());
-        
-        /*
-         * Registers OnPTestClickListener for "button1" in the layout, which is the "PTest" button.
-         * OnPTestClickListener demonstrates how to access a ContentProvider.
-         */
+
         findViewById(R.id.button1).setOnClickListener(
                 new OnPTestClickListener(tv, getContentResolver()));
         
-        /*
-         * In your implementation you need to get the message from the input box (EditText)
-         * and send it to other AVDs.
-         */
         TelephonyManager tel = (TelephonyManager) this.getSystemService(Context.TELEPHONY_SERVICE);
         Log.v(TAG, tel.getLine1Number());
         String portStr = tel.getLine1Number().substring(tel.getLine1Number().length() - 4);
@@ -112,6 +92,18 @@ public class GroupMessengerActivity extends Activity {
         } catch (IOException e) {
             Log.e(TAG, "Can't create a ServerSocket");
         }
+        pingAckHandle = pingAck.scheduleAtFixedRate(new Runnable() {
+            @Override
+            public void run() {
+                sendHeartBeat();
+            }
+        }, 8, 5, TimeUnit.SECONDS);
+//        pingAck.scheduleAtFixedRate(new Runnable() {
+//            @Override
+//            public void run() {
+//                deliverQueued();
+//            }
+//        }, 2, 1, TimeUnit.SECONDS );
     }
 
     @Override
@@ -134,7 +126,29 @@ public class GroupMessengerActivity extends Activity {
             String msg = editText.getText().toString() + "\n";
             editText.setText("");
             new ClientTask().executeOnExecutor(AsyncTask.SERIAL_EXECUTOR, msg, myPort);
+
             Log.v(TAG, msg);
+        }
+    }
+    public void sendHeartBeat(){
+        Socket socket = null;
+        Message check = new Message();
+        int i=0;
+        if (diededPorts.isEmpty()) {
+            try {
+                for (i = 0; i < 5; i++) {
+                    socket = new Socket(InetAddress.getByAddress(new byte[]{10, 0, 2, 2}),
+                            PORTS_ALL[i]);
+                    ObjectOutputStream outStream = new ObjectOutputStream(socket.getOutputStream());
+                    outStream.writeObject(check);
+                }
+            } catch (IOException e) {
+                Log.e(TAG, PORTS_ALL[i] + " failed");
+                diededPorts.add(Integer.valueOf(PORTS_ALL[i]));
+                mActiveNodes.decrementAndGet();
+                handleFailure(PORTS_ALL[i]);
+                e.printStackTrace();
+            }
         }
     }
 
@@ -142,9 +156,15 @@ public class GroupMessengerActivity extends Activity {
         @Override
         protected Void doInBackground(ServerSocket... sockets) {
             ServerSocket serverSocket = sockets[0];
-
-            try {
-                do {
+            do {
+                try {
+                    access.acquire();
+                    if (deliver.getAndSet(false))
+                        while (deliverableQueue.peek() != null && deliverableQueue.peek().agreed) {
+                            Log.e(TAG, "Deliver preempt " + deliverableQueue.peek().message);
+                            publishProgress(deliverableQueue.poll());
+                        }
+                    access.release();
                     Socket clientHook = serverSocket.accept();
                     /*
                     BufferedReader reader = new BufferedReader(new InputStreamReader(clientHook.getInputStream()));
@@ -152,36 +172,48 @@ public class GroupMessengerActivity extends Activity {
                     */
                     ObjectInputStream objStream = new ObjectInputStream(clientHook.getInputStream());
                     Message receivedMessage = (Message) objStream.readObject();
-                    if (receivedMessage != null) {
+                    if (receivedMessage != null && receivedMessage.port!=2) {
                         if (receivedMessage.type == Message.MessageType.MESSAGE) {
-                            String key = receivedMessage.pid + receivedMessage.message;
-                            if (!messageHash.containsKey(key)) {
-                                messageHash.put(key, receivedMessage);
-                            } else
-                                Log.e(TAG, "Already there");
+                            Log.e(TAG, "Received message port " + receivedMessage.port);
+                            if (!diededPorts.contains(new Integer(receivedMessage.port))) {
+                                String key = receivedMessage.pid + receivedMessage.message;
+                                if (!messageHash.containsKey(key)) {
+                                    messageHash.put(key, receivedMessage);
+                                } else
+                                    Log.e(TAG, "Already there");
 
-                            deliverableQueue.add(receivedMessage);
-                            final Message sendProposed = new Message(receivedMessage);
-
-                            sendProposed.type = Message.MessageType.PROPOSED_SEQ;
-                            sendProposed.sequence = maxSequence.incrementAndGet();
-                            receivedMessage.print();
-                            // Add to priority queue
-                            Thread sendProposedSeq = new Thread(new Runnable() {
-                                @Override
-                                public void run() {
-                                    sendMessage(sendProposed, sendProposed.port);
+                                access.acquire();
+                                if (!deliverableQueue.contains(receivedMessage)) {
+                                    //TODO Changed ordering
+                                    receivedMessage.sequence = maxSequence.get();
+                                    deliverableQueue.add(receivedMessage);
                                 }
-                            });
-                            sendProposedSeq.start();
+                                access.release();
+                                final Message sendProposed = new Message(receivedMessage);
+
+                                sendProposed.type = Message.MessageType.PROPOSED_SEQ;
+                                sendProposed.sequence = maxSequence.getAndIncrement();
+                                receivedMessage.print();
+                                // Add to priority queue
+                                Thread sendProposedSeq = new Thread(new Runnable() {
+                                    @Override
+                                    public void run() {
+                                        sendMessage(sendProposed, sendProposed.port);
+                                    }
+                                });
+                                sendProposedSeq.start();
+                            }
                         } else if (receivedMessage.type == Message.MessageType.PROPOSED_SEQ) {
                             proposedSequence(receivedMessage);
                         } else if (receivedMessage.type == Message.MessageType.AGREED_SEQ) {
                             String key = receivedMessage.pid + receivedMessage.message;
                             if (messageHash.containsKey(key)) {
                                 Message retrieve = messageHash.remove(key);
-                                Log.v(TAG, "Dispatch " + receivedMessage.sequence);
+                                Log.v(TAG, "Dispatch " + receivedMessage.sequence + " " + receivedMessage.message);
                                 maxSequence.set(Math.max(maxSequence.get(), receivedMessage.sequence));
+                                access.acquire();
+                                if (deliverableQueue.peek() != null)
+                                    Log.e(TAG, "Waiting for :" + deliverableQueue.peek().message + " " + deliverableQueue.peek().sequence);
                                 if (deliverableQueue.contains(retrieve)) {
                                     deliverableQueue.remove(retrieve);
                                     retrieve.sequence = receivedMessage.sequence;
@@ -189,26 +221,31 @@ public class GroupMessengerActivity extends Activity {
                                     deliverableQueue.add(retrieve);
                                     while (deliverableQueue.peek() != null && deliverableQueue.peek().agreed) {
                                         Log.e(TAG, "Deliver " + deliverableQueue.peek().message);
-//                                    deliverMessage(deliverableQueue.poll().message);
                                         publishProgress(deliverableQueue.poll());
                                     }
                                 }
+                                while (deliverableQueue.peek() != null && deliverableQueue.peek().agreed) {
+                                    Log.e(TAG, "Deliver 1" + deliverableQueue.peek().message);
+                                    publishProgress(deliverableQueue.poll());
+                                }
+                                access.release();
                             }
                         }
                     }
                     clientHook.close();
-                } while (true);
-            } catch (IOException e) {
-                e.printStackTrace();
-            } catch (ClassNotFoundException e) {
-                e.printStackTrace();
-            }
-            return null;
+
+                } catch (IOException e) {
+                    e.printStackTrace();
+                } catch (ClassNotFoundException e) {
+                    e.printStackTrace();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            } while (true);
         }
 
 
         private void proposedSequence(Message receivedMessage) {
-
             String key = receivedMessage.pid + receivedMessage.message;
             int sequence = receivedMessage.sequence;
             if (messageHash.containsKey(key)) {
@@ -222,13 +259,17 @@ public class GroupMessengerActivity extends Activity {
                     retrieve.sequence = sequence;
                 }
                 retrieve.consensus++;
-                retrieve.totalConsensus&=~(1<<receivedMessage.pid);
-                if (retrieve.consensus == mActiveNodes.get()) {
+                retrieve.totalConsensus &= ~(1 << receivedMessage.pid);
+                deliverableQueue.remove(retrieve);
+                deliverableQueue.add(retrieve);
+                if (retrieve.consensus >= mActiveNodes.get()) {
                     retrieve.type = Message.MessageType.AGREED_SEQ;
+                    Log.e(TAG, "---- Agreed sequence ----");
+                    retrieve.print();
+                    Log.e(TAG, "--------end--------");
                     sendSeqAck(retrieve);
                 }
                 messageHash.put(key, retrieve);
-
                 access.release();
             }
 
@@ -237,45 +278,46 @@ public class GroupMessengerActivity extends Activity {
         protected void onProgressUpdate(Message... receivedMessage) {
             deliverMessage(receivedMessage[0].message);
         }
+    }
 
-
-        private void deliverMessage(String... strings) {
-            String strReceived = strings[0].trim();
-            TextView localTextView = (TextView) findViewById(R.id.textView1);
-            localTextView.append(strReceived + "\n");
-            mContentResolver = getContentResolver();
-            ContentValues mContentValues = new ContentValues();
-            mContentValues.put("key", Integer.toString(messageCount));
-            mContentValues.put("value", strReceived);
-            mContentResolver.insert(mUri, mContentValues);
-            messageCount++;
-        }
+    private void deliverMessage(String... strings) {
+        String strReceived = strings[0].trim();
+        TextView localTextView = (TextView) findViewById(R.id.textView1);
+        localTextView.append(strReceived + "\n");
+        mContentResolver = getContentResolver();
+        ContentValues mContentValues = new ContentValues();
+        mContentValues.put("key", Integer.toString(messageCount));
+        mContentValues.put("value", strReceived);
+        mContentResolver.insert(mUri, mContentValues);
+        messageCount++;
     }
 
     private class ClientTask extends AsyncTask<String, Void, Void> {
 
         @Override
         protected Void doInBackground(String... msgs) {
+            int seq = maxSequence.getAndIncrement();
             for (int i = 0; i < 5; i++) {
-                sendMessage(i, msgs);
+                sendMessage(i, seq, msgs);
             }
             return null;
         }
 
-        private void sendMessage(int i, String... msgs) {
-            Socket socket = null;
-            if (!diededPorts.contains(new Integer(PORTS_ALL[i]))) {
+        private void sendMessage(int i, int seq, String... msgs) {
+            Socket socket;
+            if (!diededPorts.contains(Integer.valueOf(PORTS_ALL[i]))) {
                 try {
                     socket = new Socket(InetAddress.getByAddress(new byte[]{10, 0, 2, 2}),
                             PORTS_ALL[i]);
                     String msgToSend = msgs[0];
                     OutputStream out = socket.getOutputStream();
                     ObjectOutputStream objStream = new ObjectOutputStream(out);
-
-                    Message msg = new Message(Message.MessageType.MESSAGE, msgToSend, msgs[1], 0);
+                    Message msg = new Message(Message.MessageType.MESSAGE, msgToSend, msgs[1], 0, seq);
                     String key = msg.pid + msg.message;
+                    access.acquire();
                     if (!messageHash.containsKey(key))
                         messageHash.put(key, msg);
+                    access.release();
 
                     objStream.writeObject(msg);
                     socket.close();
@@ -284,6 +326,8 @@ public class GroupMessengerActivity extends Activity {
                     diededPorts.add(PORTS_ALL[i]);
                     mActiveNodes.decrementAndGet();
                     handleFailure(PORTS_ALL[i]);
+                    e.printStackTrace();
+                } catch (InterruptedException e) {
                     e.printStackTrace();
                 }
             }
@@ -296,46 +340,49 @@ public class GroupMessengerActivity extends Activity {
         } catch (InterruptedException e) {
             e.printStackTrace();
         }
+        pingAckHandle.cancel(true);
         Log.e(TAG, "______FAILURE_______");
         for (Map.Entry<String, Message> iter : messageHash.entrySet()) {
             Message msg = iter.getValue();
-            int pid = (port-11108)/4;
-            if ((msg.totalConsensus&(1<<pid))!=0) {
+            int pid = (port - 11108) / 4;
+            if (msg.port == port) {
+                deliverableQueue.remove(msg);
+                messageHash.remove(iter.getKey());
+            } else if ((msg.totalConsensus & (1 << pid)) != 0 &&msg.port==Integer.parseInt(myPort)) {
                 Log.e(TAG, "waiting for dead process");
                 msg.print();
-                if(msg.consensus == mActiveNodes.get()) {
-                    msg.agreed = true;
+                if (msg.consensus == mActiveNodes.get()) {
                     msg.type = Message.MessageType.AGREED_SEQ;
-                    sendSeqAck(msg);
-                }
-                else{
+                    final Message send = new Message(msg);
+                    Thread sendProposedSeq = new Thread(new Runnable() {
+                        @Override
+                        public void run() {
+                            sendSeqAck(send);
+                        }
+                    });
+                    sendProposedSeq.start();
+                } else {
                     msg.consensus++;
-                    msg.totalConsensus&=~(1<<pid);
+                    msg.totalConsensus &= ~(1 << pid);
                 }
                 messageHash.put(iter.getKey(), msg);
             }
-            Log.e(TAG, msg.message + " " + msg.consensus + " " + msg.port);
-            if (msg.port == port) {
-                msg.agreed = true;
-                //messageHash.put(iter.getKey(), msg);
-//                msg.type = Message.MessageType.AGREED_SEQ;
-                deliverableQueue.remove(msg);
-//                sendSeqAck(msg);
+            if (msg.consensus == mActiveNodes.get()) {
+                msg.type = Message.MessageType.AGREED_SEQ;
+                final Message send = new Message(msg);
+                Thread sendProposedSeq = new Thread(new Runnable() {
+                    @Override
+                    public void run() {
+                        sendSeqAck(send);
+                    }
+                });
+                sendProposedSeq.start();
             }
         }
-        Log.e(TAG, "-----deliverable queue-----");
-        Iterator<Message>de = deliverableQueue.iterator();
-        while(de.hasNext()){
-            de.next().print();
-        }
-/*        Iterator<Message> iter= deliverableQueue.iterator();
-        while(iter.hasNext()){
-            Message tmp = iter.next();
-            if(tmp.port == port)
-                tmp.agreed = true;
-            deliverableQueue.remove(tmp);
-            deliverableQueue.add(tmp);
-        }*/
+
+        if (deliverableQueue.peek() != null && deliverableQueue.peek().agreed)
+            deliver.set(true);
+
         Log.e(TAG, "______________END___________");
         access.release();
     }
@@ -347,7 +394,7 @@ public class GroupMessengerActivity extends Activity {
     }
 
     private void sendMessage(Message receivedMessage, int port) {
-        Socket socket = null;
+        Socket socket;
         if (!diededPorts.contains(Integer.valueOf(port))) {
             try {
                 socket = new Socket(InetAddress.getByAddress(new byte[]{10, 0, 2, 2}),
@@ -357,12 +404,25 @@ public class GroupMessengerActivity extends Activity {
                 outStream.writeObject(receivedMessage);
             } catch (IOException e) {
                 Log.e(TAG, port + " failed");
-                diededPorts.add(Integer.valueOf(port));
+                diededPorts.add(port);
                 mActiveNodes.decrementAndGet();
                 handleFailure(port);
                 e.printStackTrace();
             }
         }
+    }
+    private void deliverQueued(){
+        try {
+            access.acquire();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        Log.e("TIME", "TimedTask");
+        while (deliverableQueue.peek() != null && deliverableQueue.peek().agreed) {
+                Log.e(TAG, "Deliver preempt " + deliverableQueue.peek().message);
+                deliverMessage(deliverableQueue.poll().message);
+            }
+        access.release();
     }
 }
 
